# staticlib_pimpl

./: .gitmodules  .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/html/: PimplException_8hpp.html  PimplException_8hpp_source.html  PimplObject_8hpp.html  PimplObject_8hpp_source.html  annotated.html  auto__rec_8hpp.html  auto__rec_8hpp_source.html  bool_8hpp.html  bool_8hpp_source.html  cat_8hpp.html  cat_8hpp_source.html  classes.html  classstaticlib_1_1pimpl_1_1PimplException-members.html  classstaticlib_1_1pimpl_1_1PimplException.html  classstaticlib_1_1pimpl_1_1PimplObject-members.html  classstaticlib_1_1pimpl_1_1PimplObject.html  classstaticlib_1_1pimpl_1_1PimplObject_1_1Impl-members.html  classstaticlib_1_1pimpl_1_1PimplObject_1_1Impl.html  classstaticlib_1_1pimpl_1_1object-members.html  classstaticlib_1_1pimpl_1_1object.html  classstaticlib_1_1pimpl_1_1object_1_1impl-members.html  classstaticlib_1_1pimpl_1_1object_1_1impl.html  classstaticlib_1_1pimpl_1_1pimpl__exception-members.html  classstaticlib_1_1pimpl_1_1pimpl__exception.html  comma_8hpp.html  comma_8hpp_source.html  comma__if_8hpp.html  comma__if_8hpp_source.html  compl_8hpp.html  compl_8hpp_source.html  config_8hpp.html  config_8hpp_source.html  dec_8hpp.html  dec_8hpp_source.html  detail_2dmc_2for_8hpp.html  detail_2dmc_2for_8hpp_source.html  detail_2edg_2for_8hpp.html  detail_2edg_2for_8hpp_source.html  detail_2for_8hpp.html  detail_2for_8hpp_source.html  (+113 more)
docs/html/search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_67.js  all_69.js  all_6e.js  all_6f.js  all_70.js  all_73.js  all_7e.js  classes_69.js  classes_6f.js  classes_70.js  defines_70.js  defines_73.js  files_63.js  files_69.js  files_6f.js  files_70.js  files_72.js  files_73.js  functions_69.js  functions_6f.js  functions_70.js  functions_74.js  functions_77.js  functions_7e.js  namespaces_73.js  related_6f.js  search.js
include/staticlib/: pimpl.hpp
include/staticlib/pimpl/: PimplException.hpp  PimplObject.hpp  forward_macros.hpp  object.hpp  pimpl_exception.hpp  pimpl_forward_macros.hpp  pimpl_object.hpp  pimpl_utils.hpp
include/staticlib/pimpl/ext_preprocessor/: cat.hpp  ext_preprocessor.hpp
include/staticlib/pimpl/ext_preprocessor/arithmetic/: .dec.hpp.swp  dec.hpp  inc.hpp
include/staticlib/pimpl/ext_preprocessor/comparison/: equal.hpp  not_equal.hpp
include/staticlib/pimpl/ext_preprocessor/config/: config.hpp
include/staticlib/pimpl/ext_preprocessor/control/: expr_if.hpp  expr_iif.hpp  if.hpp  iif.hpp
include/staticlib/pimpl/ext_preprocessor/debug/: error.hpp
include/staticlib/pimpl/ext_preprocessor/detail/: auto_rec.hpp
include/staticlib/pimpl/ext_preprocessor/facilities/: empty.hpp  expand.hpp  is_1.hpp  is_empty.hpp  is_empty_variadic.hpp  overload.hpp
include/staticlib/pimpl/ext_preprocessor/facilities/detail/: is_empty.hpp
include/staticlib/pimpl/ext_preprocessor/logical/: bool.hpp  compl.hpp
include/staticlib/pimpl/ext_preprocessor/punctuation/: comma.hpp  comma_if.hpp  is_begin_parens.hpp
include/staticlib/pimpl/ext_preprocessor/repetition/: for.hpp
include/staticlib/pimpl/ext_preprocessor/seq/: elem.hpp  enum.hpp  for_each_i.hpp  seq.hpp  size.hpp
include/staticlib/pimpl/ext_preprocessor/tuple/: .size.hpp.swp  eat.hpp  elem.hpp  rem.hpp  size.hpp
include/staticlib/pimpl/ext_preprocessor/variadic/: elem.hpp  size.hpp
include/staticlib/refobjects/: RefCountObject.hpp  RefObjectEmptyException.hpp  RefObjectException.hpp  RefUniqueObject.hpp  refobjects_macros.hpp
src/: PimplObject.cpp  RefCountObject.cpp  RefUniqueObject.cpp  object.cpp  pimpl_object.cpp  pimpl_utils.cpp
test/: CMakeLists.txt  PimplObject_test.cpp  RefCountObject_test.cpp  RefUniqueObject_test.cpp  object_test.cpp  pimpl_object_test.cpp
test/refcount/: Abstract.cpp  Abstract.hpp  AbstractImpl.hpp  Base.cpp  Base.hpp  Base2.cpp  Base2.hpp  Base2Impl.hpp  Base3.cpp  Base3.hpp  Base3Impl.hpp  BaseImpl.hpp  Derived.cpp  Derived.hpp  Intermediate.cpp  Intermediate.hpp  IntermediateImpl.hpp
test/unique/: Abstract.cpp  Abstract.hpp  AbstractImpl.hpp  Base.cpp  Base.hpp  Base2.hpp  Base3.hpp  BaseImpl.hpp  Derived.cpp  Derived.hpp  Intermediate.cpp  Intermediate.hpp  IntermediateImpl.hpp  TestException.hpp  abstract.cpp  abstract.hpp  abstract_impl.hpp  base.cpp  base.hpp  base2.hpp  base3.hpp  base_impl.hpp  derived.cpp  derived.hpp  intermediate.cpp  intermediate.hpp  intermediate_impl.hpp  test_exception.hpp
(+6 files in other folders)
